// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ERC20Contract.vue Should display contract info 1`] = `
<div class="container container--fluid">
  <div class="row mb-1">
    <div class="col-lg-5 col-12">
      <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
        <div class="v-card__title">
          <!---->
          Amalfi
        </div>
        <div class="v-card__subtitle"><span class="success mr-2 v-chip v-chip--no-color theme--light v-size--x-small"><span class="v-chip__content">
                            ERC 20
                        </span></span></div>
        <div class="v-card__text">
          <div class="row">
            <div class="col col-6"><small>Total Supply</small><br> <span class="text-h6 ml-2">10,000,000 </span></div>
            <div class="col col-6"><small>Decimals</small><br> <span class="text-h6 ml-2">2</span></div>
          </div>
          <div class="row">
            <div class="col col-6"><small>Address</small><br>
              <hash-link-stub hash="0x123" type="address" class="ml-2"></hash-link-stub>
            </div>
            <div class="col col-6"><small>Contract Creation</small><br> <span class="ml-2"><hash-link-stub hash="0xabc" type="transaction"></hash-link-stub></span></div>
          </div>
        </div>
      </div>
    </div>
    <div class="col-lg-7 col-12">
      <div class="row">
        <div class="col-sm-6 col-lg-6 col-12">
          <stat-number-stub value="1" title="Holders"></stat-number-stub>
        </div>
        <div class="col-sm-6 col-lg-6 col-12">
          <stat-number-stub value="2" title="Transfers"></stat-number-stub>
        </div>
        <div class="col-sm-6 col-lg-6 col-12">
          <stat-number-stub tokentype="erc20" decimals="2" infotooltip="Number of tokens currently in circulation" value="1000000000" title="Circulating Supply"></stat-number-stub>
        </div>
        <div class="col-sm-6 col-lg-6 col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
            <div class="v-card__subtitle">Your Balance</div>
            <div class="v-card__text">
              <metamask-stub class="mt-1"></metamask-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="v-tabs theme--light">
      <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text">
        <div class="v-slide-group__prev v-slide-group__prev--disabled">
          <transition-stub name="fade-transition"></transition-stub>
        </div>
        <div class="v-slide-group__wrapper">
          <div class="v-slide-group__content v-tabs-bar__content">
            <div class="v-tabs-slider-wrapper" style="transition: none;">
              <div class="v-tabs-slider"></div>
            </div><a tabindex="0" href="#transactions" aria-selected="true" role="tab" class="v-tab v-tab--active" id="transactionsTab">Transactions</a> <a tabindex="0" href="#transfers" aria-selected="false" role="tab" class="v-tab" id="transfersTab">Transfers</a> <a tabindex="0" href="#holders" aria-selected="false" role="tab" class="v-tab" id="holdersTab">Holders</a> <a tabindex="0" href="#interactions" aria-selected="false" role="tab" class="v-tab" id="interactionsTab">Read / Write</a> <a tabindex="0" href="#code" aria-selected="false" role="tab" class="v-tab" id="codeTab">Code</a> <a tabindex="0" href="#analytics" aria-selected="false" role="tab" class="v-tab" id="analyticsTab">Analytics</a>
          </div>
        </div>
        <div class="v-slide-group__next v-slide-group__next--disabled">
          <transition-stub name="fade-transition"></transition-stub>
        </div>
      </div>
    </div>
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <transition-stub name="">
          <div class="v-window-item v-window-item--active" id="transactions">
            <div class="mt-3 v-card v-sheet v-sheet--outlined theme--light">
              <div class="v-card__text">
                <div class="container container--fluid">
                  <transactions-list-stub address="0x123" currentaddress="0x123"></transactions-list-stub>
                </div>
              </div>
            </div>
          </div>
        </transition-stub>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <transition-stub name="">
          <!---->
        </transition-stub>
        <transition-stub name="">
          <!---->
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`ERC20Contract.vue Should display placeholders 1`] = `
<div class="container container--fluid">
  <div class="row mb-1">
    <div class="col-lg-5 col-12">
      <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
        <div class="v-card__title">
          <!---->

        </div>
        <div class="v-card__subtitle"></div>
        <div class="v-card__text">
          <div class="row">
            <div class="col col-6"><small>Total Supply</small><br> <span class="text-h6 ml-2">N/A</span></div>
            <div class="col col-6"><small>Decimals</small><br> <span class="text-h6 ml-2">N/A</span></div>
          </div>
          <div class="row">
            <div class="col col-6"><small>Address</small><br>
              <hash-link-stub hash="0x123" type="address" class="ml-2"></hash-link-stub>
            </div>
            <div class="col col-6"><small>Contract Creation</small><br> <span class="ml-2"><hash-link-stub hash="0xabc" type="transaction"></hash-link-stub></span></div>
          </div>
        </div>
      </div>
    </div>
    <div class="col-lg-7 col-12">
      <div class="row">
        <div class="col-sm-6 col-lg-6 col-12">
          <stat-number-stub value="0" title="Holders"></stat-number-stub>
        </div>
        <div class="col-sm-6 col-lg-6 col-12">
          <stat-number-stub value="0" title="Transfers"></stat-number-stub>
        </div>
        <div class="col-sm-6 col-lg-6 col-12">
          <stat-number-stub infotooltip="Number of tokens currently in circulation" value="0" title="Circulating Supply"></stat-number-stub>
        </div>
        <div class="col-sm-6 col-lg-6 col-12">
          <div class="v-card v-sheet v-sheet--outlined theme--light" style="height: 100%;">
            <div class="v-card__subtitle">Your Balance</div>
            <div class="v-card__text">
              <metamask-stub class="mt-1"></metamask-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="v-tabs theme--light">
      <div role="tablist" class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text" data-booted="true">
        <div class="v-slide-group__prev v-slide-group__prev--disabled">
          <transition-stub name="fade-transition"></transition-stub>
        </div>
        <div class="v-slide-group__wrapper">
          <div class="v-slide-group__content v-tabs-bar__content">
            <div class="v-tabs-slider-wrapper" style="height: 2px; left: 0px; width: 0px;">
              <div class="v-tabs-slider"></div>
            </div><a tabindex="0" href="#transactions" aria-selected="true" role="tab" class="v-tab v-tab--active" id="transactionsTab">Transactions</a> <a tabindex="0" href="#transfers" aria-selected="false" role="tab" class="v-tab" id="transfersTab">Transfers</a> <a tabindex="0" href="#holders" aria-selected="false" role="tab" class="v-tab" id="holdersTab">Holders</a> <a tabindex="0" href="#interactions" aria-selected="false" role="tab" class="v-tab" id="interactionsTab">Read / Write</a> <a tabindex="0" href="#code" aria-selected="false" role="tab" class="v-tab" id="codeTab">Code</a> <a tabindex="0" href="#analytics" aria-selected="false" role="tab" class="v-tab" id="analyticsTab">Analytics</a>
          </div>
        </div>
        <div class="v-slide-group__next v-slide-group__next--disabled">
          <transition-stub name="fade-transition"></transition-stub>
        </div>
      </div>
    </div>
    <div class="v-window v-item-group theme--light v-tabs-items">
      <div class="v-window__container">
        <transition-stub name="v-window-x-transition">
          <div class="v-window-item v-window-item--active" id="transactions">
            <div class="mt-3 v-card v-sheet v-sheet--outlined theme--light">
              <div class="v-card__text">
                <div class="container container--fluid">
                  <transactions-list-stub address="0x123" currentaddress="0x123"></transactions-list-stub>
                </div>
              </div>
            </div>
          </div>
        </transition-stub>
        <transition-stub name="v-window-x-transition">
          <!---->
        </transition-stub>
        <transition-stub name="v-window-x-transition">
          <!---->
        </transition-stub>
        <transition-stub name="v-window-x-transition">
          <!---->
        </transition-stub>
        <transition-stub name="v-window-x-transition">
          <!---->
        </transition-stub>
        <transition-stub name="v-window-x-transition">
          <!---->
        </transition-stub>
      </div>
    </div>
  </div>
</div>
`;
